--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,8 @@
     <title>Filmoteka + Firebase</title>
   </head>
 
-  <body></body>
+  <body>
+    <!-- DON`T FORGET TO DELETE IT :D -->
+    <h1>Hello Team!(❁´◡`❁)</h1>
+  </body>
 </html>
