--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,9 @@
   <body>
     <!-- DON`T FORGET TO DELETE IT :D -->
     <h1>Hello Team!(❁´◡`❁)</h1>
+
+    <form>
+      <input class="input" type="text" />
+    </form>
   </body>
 </html>
