adds a modal.js and a modal.scss

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,15 @@
   <body>
     <!-- DON`T FORGET TO DELETE IT :D -->
     <h1>Hello Team!(❁´◡`❁)</h1>
+
+    <!-- Modal -->
+    <button tupe="button" data-open-modal>Open Modal</button>
+    <template id="modal">
+      <div class="modal">
+        <p>It's modal templ</p>
+        <button type="button" data-close-modal>x</button>
+      </div>
+    </template>
+
   </body>
 </html>
