binding a template to a js file

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,13 @@
   </head>
 
   <body>
-<!-- last commit -->
-    
+    <!-- last commit -->
+
     <h1>gdfgdfshdfshdfh</h1>
+    <main>
+      <section class="js-section-film">
+        <ul class="js-ul-film"></ul>
+      </section>
+    </main>
   </body>
 </html>
