--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,6 @@
   </head>
 
   <body>
-<!-- last commit -->
-    
-    <h1>gdfgdfshdfshdfh</h1>
+    <input type="text" class="input" />
   </body>
 </html>
