--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,16 @@
 <!-- last commit -->
     
     <h1>gdfgdfshdfshdfh</h1>
+
+    <button class="js-btn">My Library</button>
+    <main>
+      <!-- My Library section -->
+      <section class="my-library">
+        <ul class="my-library__list">
+
+        </ul>
+      </section>
+    </main>
+    
   </body>
 </html>
