--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   </head>
 
   <body>
-    <input type="text" class="input" />
+    <!-- Sign up -->
+    <form id="signupForm-js">
+      <h3>Sign up</h3>
+      <input type="text" placeholder="Display Name" id="displayName-js" />
+      <input type="email" placeholder="Email" id="email-js" />
+      <input type="password" placeholder="Password" id="password-js" />
+      <!-- <div v-if="error" class="error">{{ error }}</div> -->
+      <button id="signupBtn-js">Sign up</button>
+      <!-- <button v-if="isPending" disabled>Loading...</button> -->
+    </form>
   </body>
 </html>
