--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
 
 <body>
   <input type="text" class="input" />
+
+  <!-- My Library section -->
+  
   <section class="my-library">
     <ul class="my-library__list"></ul>
   </section>
