--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
   <body>
     <!-- last commit -->
 
-    <h1>gdfgdfshdfshdfh</h1>
     <main>
       <section class="js-section-film">
-        <ul class="js-ul-film"></ul>
+        <h2>Аcсортимент фильмов</h2>
+        <ul class="film-list js-ul-film"></ul>
       </section>
     </main>
   </body>
