--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,73 @@
   </head>
 
   <body>
-<!-- last commit -->
+<!-- Heder home -->
     
-    <h1>gdfgdfshdfshdfh</h1>
+<header class="header-home header">
+  <div class="container">
+    <div class="top-flex-home">
+      <a href="./index.html" class="logo">
+        <svg width="24" height="24" class="logo-icon">
+          <use href="../src/images/sprite.svg#icon-film"></use>
+        </svg>
+        <p class="logo-title">Filmoteka</p>
+      </a>
+
+      <nav>
+        <ul class="site-nav list">
+          <li class="nav-item">
+            <a href="../src/index.html" class="link current">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="../src/my-library.html" class="link">my library</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <form class="search-form" id="search-form">
+      <input name="query" class="search-input" type="text" autocomplete="off" placeholder="Search movies" />
+      <button type="submit" class="search-btn">
+        <svg width="12" height="12">
+          <use href="../src/images/sprite.svg#icon-search-2"></use>
+        </svg>
+      </button>
+    </form>
+
+    <p class="notification">
+      Search result not successful. Enter the correct movie name and try again
+    </p>
+  </div>
+</header>
+
+<!-- Heder library -->
+<header class="header-library header">
+  <div class="container">
+    <div class="top-flex-library">
+      <a href="./index.html" class="logo">
+        <svg width="24" height="24" class="logo-icon">
+          <use href="../src/images/sprite.svg#icon-film"></use>
+        </svg>
+        <p class="logo-title">Filmoteka</p>
+      </a>
+
+      <nav>
+        <ul class="site-nav list">
+          <li class="nav-item">
+            <a href="../src/index.html" class="link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="../src/my-library.html" class="link current">my library</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="bottom-header">
+      <button class="button header-button watched-btn">Watched</button>
+      <button class="button header-button queue-btn">queue</button>
+    </div>
+  </div>
+</header>
+
+    
   </body>
 </html>
