adds a desktop modal styles

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
       <div class="modal">
         <section class="modal-section">
           <div class="modal-container">
-            <img class="modal-section__image" src="./images/modal-image.jpg" alt="">
+            <div class="modal-section__thumb">
+              <img class="modal-section__image" src="./images/modal-image.jpg" alt="some text">
+            </div>
             <div class="modal-section__meta">
-              <h2 class="modal-meta__title">A FISTFUL OF LEAD</h2>
+              <h2 class="modal-meta__title">A fistful of lead</h2>
               <div class="modal-meta__info">
                 <ul class="modal-info__list">
                   <li>Vote / Votes</li>
@@ -31,7 +33,7 @@
                 <ul class="modal-info__list">
                   <li><span>7.3</span>/<span>1260</span></li>
                   <li>100.2</li>
-                  <li>A FISTFUL OF LEAD</li>
+                  <li>A fistful of lead</li>
                   <li>Western</li>
                 </ul>
               </div>
@@ -43,8 +45,8 @@
                 been double crossed – but by who and how?
               </p>
               <div class="modal-meta__btn-wrap">
-                <button>add to Watched</button>
-                <button>add to queue</button>
+                <button type="button">add to Watched</button>
+                <button type="button">add to queue</button>
               </div>
               <button class="modal-btn__close" type="button" data-close-modal>x</button>
             </div>
