--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
       />
       <div class="error-login error"></div>
       <button id="loginBtn-js">Sign up</button>
-      <!-- <button v-if="isPending" disabled>Loading...</button> -->
+      <!-- <checking how to merge</button> -->
     </form>
   </body>
 </html>
