--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,10 @@
       <div class="error-login error"></div>
       <button id="loginBtn-js">Sign up</button>
       <!-- <checking how to merge</button> -->
+      <!-- <checking how to merge</button> -->
+      <!-- <checking how to merge</button> -->
+      <!-- <checking how to merge</button> -->
+      <!-- <checking how to merge</button> -->
     </form>
   </body>
 </html>
