--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,14 @@
       <div class="error-login error"></div>
       <button id="loginBtn-js">Sign up</button>
       <!-- <checking how to merge</button> -->
+      <h2>tesct</h2>
+      <h2>tesct</h2>
+      <h2>tesct</h2>
+      <h2>tesct</h2>
+      <h2>tesct</h2>
+      <h2>tesct</h2>
+      <h2>tesct</h2>
+      <h2>tesct</h2>
     </form>
   </body>
 </html>
