styles for tablet

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 
     <main>
       <section class="js-section-film">
-        <h2>Аcсортимент фильмов</h2>
+        <h2 class="visually-hidden">Аcсортимент фильмов</h2>
         <ul class="film-list js-ul-film"></ul>
       </section>
     </main>
