--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,54 @@
   </head>
 
   <body>
+    <!-- Heder home -->
+
+    <header class="header-home header">
+      <div class="container">
+        <div class="top-flex-home">
+          <a href="./index.html" class="logo">
+            <svg width="24" height="24" class="logo-icon">
+              <use href="../src/images/sprite.svg#icon-film"></use>
+            </svg>
+            <p class="logo-title">Filmoteka</p>
+          </a>
+
+          <nav>
+            <ul class="site-nav list">
+              <li class="nav-item">
+                <a href="" class="link current link-home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="link link-library">my library</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <form class="search-form" id="search-form">
+          <input
+            name="query"
+            class="search-input"
+            type="text"
+            autocomplete="off"
+            placeholder="Search movies"
+          />
+          <button type="submit" class="search-btn">
+            <svg width="12" height="12">
+              <use href="../src/images/sprite.svg#icon-search-2"></use>
+            </svg>
+          </button>
+        </form>
+        <div class="bottom-header visually-hidden">
+          <button class="button header-button watched-btn">Watched</button>
+          <button class="button header-button queue-btn">queue</button>
+        </div>
+
+        <p class="notification">
+          Search result not successful. Enter the correct movie name and try again
+        </p>
+      </div>
+    </header>
+
     <!-- Modal -->
     <button tupe="button" data-open-modal>Open Modal</button>
     <template id="modal">
@@ -64,7 +112,7 @@
     <input type="text" class="input" />
     <div class="js-container"></div>
     <!-- Sign up -->
-    <form id="signupForm-js">
+    <!-- <form id="signupForm-js">
       <h3>Sign up</h3>
       <input
         type="text"
@@ -81,11 +129,10 @@
       />
       <div class="error-signup error"></div>
       <button id="signupBtn-js">Sign up</button>
-      <!-- <button v-if="isPending" disabled>Loading...</button> -->
-    </form>
+    </form> -->
 
     <!-- Log in -->
-    <form id="loginForm-js">
+    <!-- <form id="loginForm-js">
       <h3>Log in</h3>
       <input type="email" name="email" placeholder="Email" class="email-js" />
       <input
@@ -96,62 +143,6 @@
       />
       <div class="error-login error"></div>
       <button id="loginBtn-js">Sign up</button>
-
-      <h2>tesct</h2>
-      <h2>tesct</h2>
-      <h2>tesct</h2>
-      <h2>tesct</h2>
-      <h2>tesct</h2>
-      <h2>tesct</h2>
-      <h2>tesct</h2>
-      <h2>tesct</h2>
-    </form>
-    <!-- Heder home -->
-
-    <header class="header-home header">
-      <div class="container">
-        <div class="top-flex-home">
-          <a href="./index.html" class="logo">
-            <svg width="24" height="24" class="logo-icon">
-              <use href="../src/images/sprite.svg#icon-film"></use>
-            </svg>
-            <p class="logo-title">Filmoteka</p>
-          </a>
-
-          <nav>
-            <ul class="site-nav list">
-              <li class="nav-item">
-                <a href="" class="link current link-home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="" class="link link-library">my library</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <form class="search-form" id="search-form">
-          <input
-            name="query"
-            class="search-input"
-            type="text"
-            autocomplete="off"
-            placeholder="Search movies"
-          />
-          <button type="submit" class="search-btn">
-            <svg width="12" height="12">
-              <use href="../src/images/sprite.svg#icon-search-2"></use>
-            </svg>
-          </button>
-        </form>
-        <div class="bottom-header visually-hidden">
-          <button class="button header-button watched-btn">Watched</button>
-          <button class="button header-button queue-btn">queue</button>
-        </div>
-
-        <p class="notification">
-          Search result not successful. Enter the correct movie name and try again
-        </p>
-      </div>
-    </header>
+    </form> -->
   </body>
 </html>
