--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
       <section class="js-section-film">
         <h2 class="visually-hidden">Аcсортимент фильмов</h2>
         <ul class="film-list js-ul-film"></ul>
+
+        <div id="tui-pagination-container" class="tui-pagination"></div>
       </section>
     </main>
   </body>
