adds markup for a button

--- a/src/index.html
+++ b/src/index.html
@@ -144,5 +144,6 @@
       <div class="error-login error"></div>
       <button id="loginBtn-js">Sign up</button>
     </form> -->
+    <button class="scrollToTopBtn" id="scrollToTopButton" title="Go to top">&#8679;</button>
   </body>
 </html>
