добавляет шаблон в модальное окно

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,10 @@
       <div class="modal">
         <section class="modal-section">
           <div class="modal-container">
-            <div class="modal-section__thumb">
+            <!-- пытаюсь привязаться к этому div -->
+            <!-- <div class="film-container"></div> -->
+
+            <!-- <div class="modal-section__thumb">
               <img
                 class="modal-section__image"
                 src="./images/modal-image.jpg"
@@ -103,14 +106,17 @@
               <button class="modal-btn__close" type="button" data-close-modal>
                 x
               </button>
-            </div>
+            </div> -->
           </div>
         </section>
       </div>
     </template>
 
     <input type="text" class="input" />
-    <div class="js-container"></div>
+
+    <!-- с этим работает -->
+    <!-- <div class="film-container"></div> -->
+
     <!-- Sign up -->
     <!-- <form id="signupForm-js">
       <h3>Sign up</h3>
