--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     </header>
 
     <!-- Modal -->
-    <button tupe="button" data-open-modal>Open Modal</button>
+    <button type="button" data-open-modal>Open Modal</button>
     <template id="modal">
       <div class="modal">
         <section class="modal-section">
@@ -144,6 +144,8 @@
       <div class="error-login error"></div>
       <button id="loginBtn-js">Sign up</button>
     </form> -->
-    <button class="scrollToTopBtn" id="scrollToTopButton" title="Go to top">&#8679;</button>
+    <button class="scrollToTopBtn" id="scrollToTopButton" title="Go to top">
+      &#8679;
+    </button>
   </body>
 </html>
