adds closing by Esc

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,10 @@
         placeholder="Display Name"
         id="displayName-js"
       />
-      <input type="email" name="email" placeholder="Email" id="email-js" />
+      <input type="email" 
+        name="email" 
+        placeholder="Email" 
+        id="email-js" />
       <input
         type="password"
         name="password"
