шаблон одного фильма для модалки

--- a/src/index.html
+++ b/src/index.html
@@ -70,10 +70,7 @@
       <div class="modal">
         <section class="modal-section">
           <div class="modal-container">
-            <!-- пытаюсь привязаться к этому div -->
-            <!-- <div class="film-container"></div> -->
-
-            <!-- <div class="modal-section__thumb">
+            <div class="modal-section__thumb">
               <img
                 class="modal-section__image"
                 src="./images/modal-image.jpg"
@@ -114,7 +111,7 @@
               <button class="modal-btn__close" type="button" data-close-modal>
                 x
               </button>
-            </div> -->
+            </div>
           </div>
         </section>
       </div>
@@ -122,7 +119,7 @@
 
     <input type="text" class="input" />
 
-    <!-- с этим работает -->
+    <!-- проверка разметки -->
     <!-- <div class="film-container"></div> -->
 
     <!-- Sign up -->
