getter and setter of pages

--- a/src/index.html
+++ b/src/index.html
@@ -123,23 +123,23 @@
     <!-- <div class="film-container"></div> -->
 
     <!-- Sign up -->
-    <!-- <form id="signupForm-js">
+    <!-- <form id="signupForm">
       <h3>Sign up</h3>
       <input
         type="text"
         name="displayName"
         placeholder="Display Name"
-        class="displayName-js"
+        class="signup-displayName"
       />
-      <input type="email" name="email" placeholder="Email" class="email-js" />
+      <input type="email" name="email" placeholder="Email" class="signup-email" />
       <input
         type="password"
         name="password"
         placeholder="Password"
-        class="password-js"
+        class="signup-password"
       />
       <div class="error-signup error"></div>
-      <button id="signupBtn-js">Sign up</button>
+      <button id="signupBtn">Sign up</button>
     </form> -->
 
     <!-- Log in -->
