--- a/src/index.html
+++ b/src/index.html
@@ -133,8 +133,10 @@
 
     <!-- My Library section -->
     
-    <section class="my-library">
-      <ul class="my-library__list"></ul>
+    <section class="my-library hidden">
+      <div class="lib-container">
+        <ul class="my-library__list"></ul>
+      </div>
     </section>
     <!-- Log in -->
     <!-- <form id="loginForm-js">
