--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
       <button id="login-btn">Log in</button>
     </form>
 
-    <button class="scrollToTopBtn" id="scrollToTopButton" title="Go to top">
+    <button class="scroll-to-top-btn" id="scroll-to-top-button" title="Go to top">
       &#8679;
     </button>
   </body>
