--- a/src/index.html
+++ b/src/index.html
@@ -14,26 +14,17 @@
 
     <!-- Modal -->
     <div class="film" data-open="film"></div>
-
     <button class="button" data-open="signup">Open Modal</button>
     
     <div class=" backdrop js-backdrop">
       <div class="modal">
         <div class="modal-content"></div>
-        <button type="button" class="button" data-close-modal>Close Modal</button>
+        <button type="button" class="close-modal" data-close-modal>x</button>
       </div>
     </div>
 
-    <!-- <template id="modal">
-      <div class="modal">
-        
-      </div>
-    </template> --> 
-
-    <!-- <form class="signupForm" id="signupForm-js"></form> -->
-
     <!-- Sign up -->
-    <!-- <form id="signupForm-js">
+    <form id="signupForm-js">
       <h3>Sign up</h3>
       <input
         type="text"
@@ -52,9 +43,9 @@
         id="password-js"
       />
       <!-- <div v-if="error" class="error">{{ error }}</div> -->
-      <!-- <button id="signupBtn-js">Sign up</button> -->
+      <button id="signupBtn-js">Sign up</button>
       <!-- <button v-if="isPending" disabled>Loading...</button> -->
-    <!-- </form> --> 
+    </form> 
 
   </body>
 </html>
