--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
         <h2 class="visually-hidden">Аcсортимент фильмов</h2>
         <ul class="film-list js-ul-film"></ul>
 
-        <div id="tui-pagination-container" class="tui-pagination"></div>
+        <div id="tui-pagination-container" class="tui-pagination pagination"></div>
       </section>
     </main>
   </body>
