--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,60 @@
       <button id="signupBtn-js">Sign up</button>
       <!-- <button v-if="isPending" disabled>Loading...</button> -->
     </form>
+    <div class='footer-container'>
+    <footer class="footer">
+      <p class="footer-copyright">&copy; 2020 | all rights reserved |&nbsp;</p>
+      <p class=footer-aboute-team-link>developed <span class="lower">with<svg class="heart-svg" width="14" height="12.75"> 
+      <use href="./images/sprite.svg#icon-favorite"></use>
+      </svg>by </span><a class="footer-modal-link" href=""> go<span class="upper">it</span> students</a>
+      </p>
+      </footer>
+      </div>
+    <div class="modal">
+      <div class="modal-overlay">
+      <div class="modal-content">
+        <div class="modal-container-wrapper">
+          <h2 class="modal-title">Команда_2_проект</h2>
+        <button class="modal-button" type="button">Close</button>           
+          </div>
+        <ul class="modal-team">
+          <li class="modal-team-item">
+            <div class="modal-container-wrapper">
+              <svg class="heart-svg" width="40" height="40">
+                <use href="./images/sprite.svg#icon-bender"></use>
+              </svg>
+              <p class="modal-team-item-teammates">Alexander Gashkov</p>
+            </div>
+            <p class="modal-team-item-teammates-description">Team leader - систематизирует коллективный разум, консультирует и просто излучат позитив<p>
+            </li>
+          <li class="modal-team-item">
+            <div class="modal-container-wrapper">              
+         <img src="./images/user-group.png" width="50" height="50" alt="иконка-группа">
+            <ul class="modal-team-item-teammates">              
+            <li>Andriy Rudkovsky</li>
+            <li>Grangel Dima</li>
+            <li>Evgenii</li>
+            <li>Stanislav Kazikin</li>
+            <li>Maksym Sereda</li>
+            <li>Serhii Stanislav</li>
+            <li>Valerii</li>
+          </ul>
+          </div>
+          <p class="modal-team-item-teammates-description"> Без 5 минут программисты. Вносят неоценимый вклад в проект.</p>
+          <li class="modal-team-item">
+            <div class="modal-container-wrapper">
+         <img src="./images/user-group-creative.png" width="50" height="50" alt="иконка-группа-креатив">
+            <ul class="modal-team-item-teammates">            
+          <li>Ludmila Gavrish</li>
+          <li>Halina Prokopiv</li>
+          <li>Kara</li>          
+        </ul>
+        </div>
+        <p class="modal-team-item-teammates-description"> Креативная группа, почти веб-разработчики. Вносят красоту в проект.</p>
+            </ul>
+          </div>
+      </div>
+    </div>
+      
   </body>
 </html>
