more new features

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,8 @@
         </p>
       </div>
     </header>
+
+    <!-- MAIN -->
     <main>
       <section class="js-section-film">
         <h2 class="visually-hidden">Аcсортимент фильмов</h2>
