after footer changes

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Filmoteka + Firebase</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
@@ -62,7 +62,8 @@
         </div>
 
         <p class="notification">
-          Search result not successful. Enter the correct movie name and try again
+          Search result not successful. Enter the correct movie name and try
+          again
         </p>
       </div>
     </header>
@@ -116,14 +117,15 @@
               </div>
               <h3 class="modal-meta__title description">About</h3>
               <p class="modal-meta__text">
-                Four of the West’s most infamous outlaws assemble to steal a huge
-                stash of gold from the most corrupt settlement of the gold rush
-                towns. But not all goes to plan one is killed and the other three
-                escapes with bags of gold hide out in the abandoned gold mine where
-                they happen across another gang of three – who themselves were
-                planning to hit the very same bank! As tensions rise, things go from
-                bad to worse as they realise the bags of gold are filled with lead...
-                they’ve been double crossed – but by who and how?
+                Four of the West’s most infamous outlaws assemble to steal a
+                huge stash of gold from the most corrupt settlement of the gold
+                rush towns. But not all goes to plan one is killed and the other
+                three escapes with bags of gold hide out in the abandoned gold
+                mine where they happen across another gang of three – who
+                themselves were planning to hit the very same bank! As tensions
+                rise, things go from bad to worse as they realise the bags of
+                gold are filled with lead... they’ve been double crossed – but
+                by who and how?
               </p>
               <div class="modal-meta__btn-wrap">
                 <button type="button">add to Watched</button>
@@ -143,10 +145,10 @@
 
     <!-- Logout -->
 
-    <button id="logout">Logout</button>
+    <!-- <button id="logout">Logout</button> -->
 
     <!-- Sign up -->
-    <form id="signup-form">
+    <!-- <form id="signup-form">
       <h3>Sign up</h3>
       <input
         type="text"
@@ -171,10 +173,10 @@
       />
       <div class="error-signup error"></div>
       <button id="signup-btn">Sign up</button>
-    </form>
+    </form> -->
 
     <!-- Log in -->
-    <form id="login-form">
+    <!-- <form id="login-form">
       <h3>Log in</h3>
 
       <input
@@ -193,26 +195,35 @@
       />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-    </form>
+    </form> -->
 
-    <button class="scroll-to-top-btn" id="scroll-to-top-button" title="Go to top">
+    <button
+      class="scroll-to-top-btn"
+      id="scroll-to-top-button"
+      title="Go to top"
+    >
       &#8679;
     </button>
     <div class="footer-container">
       <footer class="footer">
-        <p class="footer-copyright">&copy; 2020 | all rights reserved |&nbsp;</p>
+        <p class="footer-copyright">
+          &copy; 2020 | all rights reserved |&nbsp;
+        </p>
         <p class="footer-aboute-team-link">
           developed
           <span class="lower"
-            >with<svg class="heart-svg" width="14" height="12.75">
+            >with
+            <svg class="heart-svg" width="14" height="12.75">
               <use href="./images/sprite.svg#icon-favorite"></use></svg
-            >by </span
-          ><a class="footer-modal-link" href="">
-            go<span class="upper">it</span> students</a
-          >
+            >by
+          </span>
+          <a class="footer-modal-link" href="">
+            go <span class="upper">it</span> students
+          </a>
         </p>
       </footer>
     </div>
+    <!-- =========================== -->
     <div class="modal">
       <div class="modal-overlay">
         <div class="modal-content">
@@ -229,8 +240,8 @@
                 <p class="modal-team-item-teammates">Alexander Gashkov</p>
               </div>
               <p class="modal-team-item-teammates-description">
-                Team leader - систематизирует коллективный разум, консультирует и
-                просто излучает позитив
+                Team leader - систематизирует коллективный разум, консультирует
+                и просто излучает позитив
               </p>
               <p></p>
             </li>
@@ -247,6 +258,7 @@
                   <li>Andriy Rudkovsky</li>
                   <li>Grangel Dima</li>
                   <li>Evgenii</li>
+
                   <li>Stanislav Kazikin</li>
                   <li>Maksym Sereda</li>
                   <li>Serhii Stanislav</li>
@@ -273,7 +285,8 @@
                 </ul>
               </div>
               <p class="modal-team-item-teammates-description">
-                Креативная группа, почти веб-разработчики. Вносят красоту в проект.
+                Креативная группа, почти веб-разработчики. Вносят красоту в
+                проект.
               </p>
             </li>
           </ul>
