--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,6 @@
     <!-- <div class="film-container"></div> -->
 
     <!-- Logout -->
-
     <!-- <button id="logout">Logout</button> -->
 
     <!-- Sign up -->
@@ -214,8 +213,7 @@
           <span class="lower"
             >with
             <svg class="heart-svg" width="14" height="12.75">
-              <use href="./images/sprite.svg#icon-favorite"></use></svg
-            >by
+              <use href="./images/sprite.svg#icon-favorite"></use></svg></svg>by
           </span>
           <a class="footer-modal-link" href="">
             go <span class="upper">it</span> students
