--- a/src/index.html
+++ b/src/index.html
@@ -144,10 +144,10 @@
     <!-- <div class="film-container"></div> -->
 
     <!-- Logout -->
-    <!-- <button id="logout">Logout</button> -->
+    <button id="logout">Logout</button>
 
     <!-- Sign up -->
-    <!-- <form id="signup-form">
+    <form id="signup-form">
       <h3>Sign up</h3>
       <input
         type="text"
@@ -172,10 +172,10 @@
       />
       <div class="error-signup error"></div>
       <button id="signup-btn">Sign up</button>
-    </form> -->
+    </form>
 
     <!-- Log in -->
-    <!-- <form id="login-form">
+    <form id="login-form">
       <h3>Log in</h3>
 
       <input
@@ -194,7 +194,7 @@
       />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-    </form> -->
+    </form>
 
     <button
       class="scroll-to-top-btn"
