modal still shall be fixed

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
     </main>
 
     <!-- Modal -->
-    <div class="film" data-open="film"></div>
+    <!-- <div class="film" data-open="film"></div>
     <button class="button" data-open="signup">Open Modal</button>
     
     <div class=" backdrop js-backdrop">
@@ -95,16 +95,16 @@
         <div class="modal-content"></div>
         <button type="button" class="close-modal" data-close-modal>x</button>
       </div>
-    </div>
+    </div> -->
 
     <!-- проверка разметки -->
     <!-- <div class="film-container"></div> -->
 
     <!-- Logout -->
-    <button id="logout">Logout</button>
+    <!-- <button id="logout">Logout</button> -->
 
     <!-- Sign up -->
-    <form id="signup-form">
+    <!-- <form id="signup-form">
       <h3>Sign up</h3>
       <input
         type="text"
@@ -129,10 +129,10 @@
       />
       <div class="error-signup error"></div>
       <button id="signup-btn">Sign up</button>
-    </form>
+    </form> -->
 
     <!-- Log in -->
-    <form id="login-form">
+    <!-- <form id="login-form">
       <h3>Log in</h3>
 
       <input
@@ -151,7 +151,7 @@
       />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-    </form>
+    </form> -->
 
     <button
       class="scroll-to-top-btn"
