--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <header class="header-home header">
       <div class="container">
         <div class="top-flex-home">
-          <a href="./index.html" class="logo">
+          <a href="" class="logo">
             <svg width="24" height="24" class="logo-icon">
               <use href="../src/images/sprite.svg#icon-film"></use>
             </svg>
