--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,11 @@
     </header>
 
     <!-- MAIN -->
+
+    <div class="loader-div" id="spinner-loader" style="display:none;text-align:center;">
+      <img class="loader-spinner" src="../src/images/spinner.gif" style="display:inline;">
+    </div>
+    
     <main>
       <section class="js-section-film">
         <h2 class="visually-hidden">Аcсортимент фильмов</h2>
