--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,12 @@
           <ul class="my-library__list"></ul>
         </div>
       </section>
+      <!-- Box Youtube Trailer -->
+      <div class="box-trailer">
+        <iframe class="movie-trailer" width="560" height="315" src="" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
     </main>
 
     <!-- Modal -->
