--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@
     <!-- MAIN -->
     
     <main>
+      <!-- <img src="./images/4.png" alt=""> -->
       <section class="js-section-film">
         <h2 class="visually-hidden">Аcсортимент фильмов</h2>
         <ul class="film-list js-ul-film"></ul>
