--- a/src/index.html
+++ b/src/index.html
@@ -71,9 +71,9 @@
     <!-- MAIN -->
 
     <div class="loader-div" id="spinner-loader" style="display:none;text-align:center;">
-      <img class="loader-spinner" src="../src/images/spinner.gif" style="display:inline;">
+      <img class="loader-spinner" src="../src/images/loader.gif" style="display:inline;">
     </div>
-    
+
     <main>
       <section class="js-section-film">
         <h2 class="visually-hidden">Аcсортимент фильмов</h2>
