--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,18 @@
               <li class="nav-item">
                 <a href="" class="link current link-home">Home</a>
               </li>
-              <li class="nav-item">
-                <a href="" class="link link-library">my library</a>
+              <li class="nav-item" >
+               <a href="" class="link link-library">my library</a>
               </li>
+              <li class="logged-in" style="display: none;">
+                 <a href="#" class="link link-library" id="logout">Logout</a>
+               </li>
+              <li class="logged-out" style="display: none;">
+                  <a href="#" class="link link-library" data-target="modal-login">Login</a>
+               </li>
+                <li class="logged-out" style="display: none;">
+                  <a href="#" class="link link-library" data-target="modal-signup">Sign up</a>
+                </li>
             </ul>
           </nav>
         </div>
@@ -68,6 +77,7 @@
       </div>
     </header>
 
+    <div class="account-details"></div>
     <ul class="getLib"></ul>
 
     <!-- MAIN -->
@@ -107,8 +117,7 @@
     <!-- проверка разметки -->
     <div class="film-container"></div>
 
-    <!-- Logout -->
-    <!-- <button id="logout">Logout</button> -->
+
 
     <!-- Sign up -->
     <!-- <form id="signup-form">
@@ -139,7 +148,7 @@
     </form> -->
 
     <!-- Log in -->
-    <!-- <form id="login-form">
+    <form id="login-form">
       <h3>Log in</h3>
 
       <input
@@ -158,7 +167,7 @@
       />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-    </form> -->
+    </form>
 
     <button
       class="scroll-to-top-btn"
