--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,9 @@
 
     <!-- MAIN -->
 
-    <div class="loader-div" id="spinner-loader" style="display:none;text-align:center;">
-      <img class="loader-spinner" src="../src/images/loader.gif" style="display:inline;">
-    </div>
+    <!-- <div class="loader-div" id="spinner-loader" style="display:none;text-align:center;">
+      <img class="loader-spinner" src="../src/images/loader-min.gif" style="display:inline;">
+    </div> -->
 
     <main>
       <section class="js-section-film">
