Шаблон модалки футер

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
     </main>
 
     <!-- Modal -->
-    <!-- <div class="film" data-open="film"></div>
+    <div class="film" data-open="film"></div>
     <button class="button" data-open="signup">Open Modal</button>
     
     <div class=" backdrop js-backdrop">
@@ -95,16 +95,16 @@
         <div class="modal-content"></div>
         <button type="button" class="close-modal" data-close-modal>x</button>
       </div>
-    </div> -->
+    </div>
 
     <!-- проверка разметки -->
-    <!-- <div class="film-container"></div> -->
+    <div class="film-container"></div> 
 
     <!-- Logout -->
-    <!-- <button id="logout">Logout</button> -->
+   <button id="logout">Logout</button> 
 
-    <!-- Sign up -->
-    <!-- <form id="signup-form">
+    <!--Sign up -->
+    <form id="signup-form">
       <h3>Sign up</h3>
       <input
         type="text"
@@ -129,10 +129,10 @@
       />
       <div class="error-signup error"></div>
       <button id="signup-btn">Sign up</button>
-    </form> -->
+    </form>
 
     <!-- Log in -->
-    <!-- <form id="login-form">
+    <form id="login-form">
       <h3>Log in</h3>
 
       <input
@@ -151,7 +151,7 @@
       />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-    </form> -->
+    </form> 
 
     <button
       class="scroll-to-top-btn"
@@ -160,93 +160,24 @@
     >
       &#8679;
     </button>
+
+    <!------footer--------->
     <div class="footer-container">
-      <footer class="footer">
+      <footer class="footer-section">
         <p class="footer-copyright">
           &copy; 2020 | all rights reserved |&nbsp;
         </p>
-        <p class="footer-aboute-team-link">
-          developed
-          <span class="lower"
-            >with
-            <svg class="heart-svg" width="14" height="12.75">
+        <p class="footer-aboute-team-link">developed<span class="footer-text-lower"> 
+          with<svg class="footer-favorite-svg" width="14" height="12.75">
               <use href="./images/sprite.svg#icon-favorite"></use></svg></svg>by
           </span>
-          <a class="footer-modal-link" href="">
-            go <span class="upper">it</span> students
+          <a class="footer-modal-link" href="">go<span class="footer-text-upper">it       
+          </span> students
           </a>
         </p>
       </footer>
     </div>
     <!-- =========================== -->
-    <div class="modal">
-      <div class="modal-overlay">
-        <div class="modal-content">
-          <div class="modal-container-wrapper">
-            <h2 class="modal-title">Команда_2_проект</h2>
-            <button class="modal-button" type="button">Close</button>
-          </div>
-          <ul class="modal-team">
-            <li class="modal-team-item">
-              <div class="modal-container-wrapper">
-                <svg class="heart-svg" width="40" height="40">
-                  <use href="./images/sprite.svg#icon-bender"></use>
-                </svg>
-                <p class="modal-team-item-teammates">Alexander Gashkov</p>
-              </div>
-              <p class="modal-team-item-teammates-description">
-                Team leader - систематизирует коллективный разум, консультирует
-                и просто излучает позитив
-              </p>
-              <p></p>
-            </li>
-
-            <li class="modal-team-item">
-              <div class="modal-container-wrapper">
-                <img
-                  src="./images/user-group.png"
-                  width="50"
-                  height="50"
-                  alt="иконка-группа"
-                />
-                <ul class="modal-team-item-teammates">
-                  <li>Andriy Rudkovsky</li>
-                  <li>Grangel Dima</li>
-                  <li>Evgenii</li>
-
-                  <li>Stanislav Kazikin</li>
-                  <li>Maksym Sereda</li>
-                  <li>Serhii Stanislav</li>
-                  <li>Valerii</li>
-                </ul>
-              </div>
-              <p class="modal-team-item-teammates-description">
-                Без 5 минут программисты. Вносят неоценимый вклад в проект.
-              </p>
-            </li>
-
-            <li class="modal-team-item">
-              <div class="modal-container-wrapper">
-                <img
-                  src="./images/user-group-creative.png"
-                  width="50"
-                  height="50"
-                  alt="иконка-группа-креатив"
-                />
-                <ul class="modal-team-item-teammates">
-                  <li>Ludmila Gavrish</li>
-                  <li>Halina Prokopiv</li>
-                  <li>Kara</li>
-                </ul>
-              </div>
-              <p class="modal-team-item-teammates-description">
-                Креативная группа, почти веб-разработчики. Вносят красоту в
-                проект.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
+   
   </body>
 </html>
