--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Filmoteka + Firebase</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"/>
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
