--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
     </form> -->
 
     <!-- Log in -->
-    <!-- <form id="login-form">
+    <form id="login-form">
       <h3>Log in</h3>
 
       <input
@@ -156,7 +156,7 @@
       />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-    </form> -->
+    </form>
 
     <button
       class="scroll-to-top-btn"
