--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
     </form> -->
 
     <!-- Log in -->
-    <form id="login-form">
+    <!-- <form id="login-form">
       <h3>Log in</h3>
 
       <input
@@ -188,7 +188,7 @@
       />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-    </form>
+    </form> -->
 
     <button
       class="scroll-to-top-btn"
