--- a/src/index.html
+++ b/src/index.html
@@ -36,10 +36,10 @@
           <nav>
             <ul class="site-nav list">
               <li class="nav-item">
-                <a href="" class="link current link-home">Home</a>
+                <a href="/#/" class="link current link-home">Home</a>
               </li>
               <li class="nav-item" >
-               <a href="" class="link link-library">my library</a>
+               <a href="/#/mylibrary" class="link link-library">my library</a>
               </li>
               <li class="logged-in" style="display: none;">
                  <a href="#" class="link link-library" id="logout">Logout</a>
@@ -68,8 +68,8 @@
           </button>
         </form>
         <div class="bottom-header visually-hidden">
-          <button class="button header-button watched-btn">Watched</button>
-          <button class="button header-button queue-btn">queue</button>
+          <a href="/#/mylibrary/watched"><button class="button header-button watched-btn">Watched</button></a>
+         <a href="/#/mylibrary/queue"> <button class="button header-button queue-btn">queue</button></a>
         </div>
 
         <p class="notification">
@@ -78,6 +78,11 @@
         </p>
       </div>
     </header>
+
+
+
+
+  
 
     <div class="account-details"></div>
     <ul class="getLib"></ul>
