--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <title>Filmoteka + Firebase</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"/>
+      <!-- Удаляет ошибку favicon.ico 404 (not found) -->
+      <link rel="shortcut icon" href="#">
+      <!-- --------------------------------------- -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
