--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,8 @@
           </button>
         </form>
         <div class="bottom-header visually-hidden">
-          <a href="/#/mylibrary/watched"><button class="button header-button watched-btn">Watched</button></a>
-         <a href="/#/mylibrary/queue"> <button class="button header-button queue-btn">queue</button></a>
+          <a href="/#/mylibrary/watched" class="link-header" ><button class="button header-button watched-btn">Watched</button></a>
+         <a href="/#/mylibrary/queue" class="link-header" > <button class="button header-button queue-btn">queue</button></a>
         </div>
 
         <p class="notification">
