--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
          <a href="/#/mylibrary/queue"> <button class="button header-button queue-btn">queue</button></a>
         </div>
 
-        <p class="notification">
+        <p class="notification" id="mainError">
           Search result not successful. Enter the correct movie name and try
           again
         </p>
@@ -114,7 +114,7 @@
       </section>
 
       <!-- <section  class="my-library " id="app">
-        <div class="lib-container">
+        <div v-if="isShowing" class="lib-container">
           <ul class="my-library__list">
              <li v-for="movie in queue"  class="my-library__item" :data-id=movie.id>
               <a href="#" class="movie-link" :data-id=movie.id>
