auth in the modal window

--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,10 @@
                  <a href="#" class="link link-library" id="logout">Logout</a>
                </li>
               <li class="logged-out" style="display: none;">
-                  <a href="#" class="link link-library" data-target="modal-login">Login</a>
+                  <a href="#" class="link link-library" data-target="modal-login" data-open="login">Login</a>
                </li>
                 <li class="logged-out" style="display: none;">
-                  <a href="#" class="link link-library" data-target="modal-signup">Sign up</a>
+                  <a href="#" class="link link-library" data-target="modal-signup" data-open="signup">Sign up</a>
                 </li>
             </ul>
           </nav>
@@ -177,7 +177,7 @@
     </form> -->
 
     <!-- Log in -->
-    <form id="login-form">
+    <!-- <form id="login-form">
       <h3>Log in</h3>
 
       <input
@@ -196,7 +196,7 @@
       />
       <div class="error-login error"></div>
       <button id="login-btn">Log in</button>
-    </form>
+    </form> -->
 
     <button
       class="scroll-to-top-btn"
